--- a/joke.html
+++ b/joke.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>秘密页</title>
-    <style>
-    @import"main.css"; 
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>秘密页</title>
+  <style>
+    @import"light.css";
     @import"secret.css";
-    </style>
-    <link href="https://fonts.googlefonts.cn/css?family=Roboto|Roboto+Slab" rel="stylesheet">
+  </style>
+  <link href="https://fonts.googlefonts.cn/css?family=Roboto|Roboto+Slab" rel="stylesheet">
 </head>
+
 <body>
-    <h1>二营笑话</h1>
-    <div>
+  <h1>二营笑话</h1>
+  <div>
     <h2>微信群里的10种人</h2>
     <p>众所周知，二营总部微信群里有10种人：</p>
     <ul>
-        <li>一种是玩烂梗的，</li>
-        <li>一种是讨论技术问题的，</li>
-        <li>一种是在怀疑为什么是10种的。</li>
+      <li>一种是玩烂梗的，</li>
+      <li>一种是讨论技术问题的，</li>
+      <li>一种是在怀疑为什么是10种的。</li>
     </ul>
     <p>提问：这是几进制？</p>
-    </div>
-    <p><br/><a href="index.html"><img/ src="https://pic.imgdb.cn/item/639695feb1fccdcd36b77c6e.png" class="logo" width="100px" height="10%" alt="返回首页"></a></p>
+  </div>
+  <p><br /><a href="index.html"><img / src="https://pic.imgdb.cn/item/639695feb1fccdcd36b77c6e.png" class="logo"
+        width="100px" height="10%" alt="返回首页"></a></p>
 
 </body>
+
 </html>
