--- a/about.html
+++ b/about.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>关于</title>
-    <style>@import"main.css"</style>
-    <link href="https://fonts.googlefonts.cn/css?family=Roboto|Roboto+Slab" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>关于</title>
+  <style>
+    @import"light.css"
+  </style>
+  <link href="https://fonts.googlefonts.cn/css?family=Roboto|Roboto+Slab" rel="stylesheet">
 </head>
+
 <body>
-    <h1>关于</h1>
-    <div>
-        <p>张永康，英文名 John Zhang，是一个郑州的七年级初中生。</p>
-        <p>喜欢音乐，编程，写文章 :-D</p>
-        <p><del>先写这么多，咕~</del></p>
-    </div>
-    <div>
-        <h2>友情链接</h2>
-        <p><a href="https://CommonGoldIngot.github.io">Common Gold Ingot 一个普通的金锭（任浩铭）</a></p>
-        <p>顺带一提，这网站是真的烂，连我都看不下去了！</p>
-        <p><br/><a href="index.html"><img/ src="https://pic.imgdb.cn/item/63943ac8b1fccdcd367c79c8.png" class="logo" width="100px" height="10%" alt="返回首页"></a></p>
-    </div>
+  <h1>关于</h1>
+  <div>
+    <p>张永康，英文名 John Zhang，是一个郑州的七年级初中生。</p>
+    <p>喜欢音乐，编程，写文章 :-D</p>
+    <p><del>先写这么多，咕~</del></p>
+  </div>
+  <div>
+    <h2>友情链接</h2>
+    <p><a href="https://CommonGoldIngot.github.io">Common Gold Ingot 一个普通的金锭（任浩铭）</a></p>
+    <p>顺带一提，这网站是真的烂，连我都看不下去了！</p>
+    <p><br /><a href="index.html"><img / src="https://pic.imgdb.cn/item/63943ac8b1fccdcd367c79c8.png" class="logo"
+          width="100px" height="10%" alt="返回首页"></a></p>
+  </div>
 </body>
+
 </html>
