--- a/about/index.html
+++ b/about/index.html
@@ -2,43 +2,53 @@
 <html lang="zh-CN" data-bs-theme="light">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="">
-    <meta name="description" content="">
-    <link href="../bootstrap5/bootstrap.min.css" rel="stylesheet">
-    <!--不要忘记更换这里的路径！-->
-    <link href="../styles/main.css" rel="stylesheet">
-    <link href="../styles/bootstrap-icons.min.css" rel="stylesheet">
-    <title>关于</title>
-    <link rel="shortcut icon" type="image/x-icon" href="../logo/shortcut.png"></link>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="keywords" content="">
+  <meta name="description" content="">
+  <link href="../bootstrap5/bootstrap.min.css" rel="stylesheet">
+  <!--不要忘记更换这里的路径！-->
+  <link href="../styles/light.css" rel="stylesheet">
+  <link href="../styles/bootstrap-icons.min.css" rel="stylesheet">
+  <title>关于</title>
+  <link rel="shortcut icon" type="image/x-icon" href="../logo/shortcut.png">
+  </link>
 </head>
 
 <body class="bg-body-secondary">
 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container">
-            <a class="btn btn-link text-decoration-none" href="about/index.html"><i class="bi bi-info-lg"></i> 关于</a>
-            <a href="../index.html"><img src="https://pic.imgdb.cn/item/661d3f9e0ea9cb1403d29f29.png" height="36"></a>
-            <button class="btn btn-link text-decoration-none" onclick="changeTheme()"><i class="bi bi-highlights"></i> 切换主题</button>        
-        </div>
-    </nav>  
-    <br />
-    
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container">
-        <h1>关于</h1>
-        <br />
-        <ul>
-            <li><a class="link" href="aboutWebsite.html">关于网站</a></li>
-            <li><a class="link" href="aboutAuthor.html">关于作者</a></li>
-            <li><a class="link" href="license.html">协议</a></li>
-            <!--<li><a class="link" href="../404.html">鸣谢</a></li>-->
-        </ul>
+      <a class="btn btn-link text-decoration-none" href="../about/index.html"><i class="bi bi-info-lg"></i> 关于</a>
+      <a href="../index.html"><img src="https://pic.imgdb.cn/item/661d3f9e0ea9cb1403d29f29.png" height="36"
+          id="logo"></a>
+      <div class="btn-group" role="group" aria-label="Basic example">
+        <button type="button" class="btn btn-outline-primary btn-sm" id="autoButton" onclick="autoTheme()"><i
+            class="bi bi-circle-half"></i></button>
+        <button type="button" class="btn btn-outline-primary btn-sm" id="lightButton" onclick="lightTheme()"><i
+            class="bi bi-sun-fill"></i></button>
+        <button type="button" class="btn btn-outline-primary btn-sm" id="darkButton" onclick="darkTheme()"><i
+            class="bi bi-moon-stars-fill"></i></button>
+      </div>
     </div>
+  </nav>
+  <br />
 
-    <!--不要忘记更换这里的路径！-->
-    <script src="../bootstrap5/bootstrap.min.js"></script>
-    <script src="../script/main.js"></script>
+  <div class="container">
+    <h1>关于</h1>
+    <br />
+    <ul>
+      <li><a class="link" href="aboutWebsite.html">关于网站</a></li>
+      <li><a class="link" href="aboutAuthor.html">关于作者</a></li>
+      <li><a class="link" href="license.html">协议</a></li>
+      <!--<li><a class="link" href="../404.html">鸣谢</a></li>-->
+    </ul>
+  </div>
+
+  <!--不要忘记更换这里的路径！-->
+  <script src="../bootstrap5/bootstrap.min.js"></script>
+  <script src="../script/js.cookie.min.js"></script>
+  <script src="../script/theme.js"></script>
 </body>
 
 </html>
