--- a/XYes-html-sandbox/XYes-html-sandbox/tools/XYes.html
+++ b/XYes-html-sandbox/XYes-html-sandbox/tools/XYes.html
@@ -73,8 +73,8 @@
     }
   </script>
   <!--不要忘记更换这里的路径！-->
-  <script src="../bootstrap5/bootstrap.bundle.min.js"></script>
-  <script src="../script/theme.js"></script>
+  <script src="bootstrap5/bootstrap.bundle.bundle.min.js"></script>
+  <script src="script/theme.js"></script>
 </body>
 
 </html>
