--- a/about.html
+++ b/about.html
@@ -7,12 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>关于</title>
   <style>
-    @import"light.css"
+    @import"main.css"
   </style>
   <link href="https://fonts.googlefonts.cn/css?family=Roboto|Roboto+Slab" rel="stylesheet">
 </head>
 
-<body>
+<body class="index-bg">
   <h1>关于</h1>
   <div>
     <p>张永康，英文名 John Zhang，是一个郑州的七年级初中生。</p>
