--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
   <meta name="keywords" content="">
   <meta name="description" content="">
   <link href="bootstrap5/bootstrap.min.css" rel="stylesheet">
-  <link href="styles/light.css" rel="stylesheet">
+  <!--<link href="styles/main.css" rel="stylesheet" id="themeCSS">-->
+  <link href="styles/main.css" rel="stylesheet">
   <link href="styles/bootstrap-icons.min.css" rel="stylesheet">
   <link rel="shortcut icon" type="image/x-icon" href="logo/shortcut.png">
   </link>
   <title>John 的网站</title>
 </head>
 
-<body class="bg-body-secondary">
+<body class="index-bg">
 
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container">
+  <nav class="navbar navbar-expand-lg nav-bg">
+    <div class="container main-text">
       <a class="btn btn-link text-decoration-none" href="about/index.html"><i class="bi bi-info-lg"></i> 关于</a>
       <a href="index.html"><img src="https://pic.imgdb.cn/item/661d3f9e0ea9cb1403d29f29.png" height="36" id="logo"></a>
       <div class="btn-group" role="group" aria-label="Basic example">
@@ -44,7 +45,7 @@
     <br />
     <div class="card">
       <div class="card-body">
-        <h6 class="card-title text-primary"><i class="bi bi-stars"></i> <strong>最新页面</strong></h6>
+        <h6 class="card-title text-john"><i class="bi bi-stars"></i> <strong>最新页面</strong></h6>
         <h2>春到回初</h2>
         <p class="card-text">春暖花开，万物复苏。</p>
         <a class="btn btn-primary" href="kind2/spring.html">阅读</a>
@@ -81,10 +82,10 @@
       </div>
     </div>
     <br />
-    <p>友情链接：任浩铭的网站——<a href="https://commongoldingot.github.io">Common Gold Ingot</a>。</p>
+    <p>友情链接：任浩铭的网站——<a class="link" href="https://commongoldingot.github.io">Common Gold Ingot</a>。</p>
   </div>
 
-  <script src="bootstrap5/bootstrap.min.js"></script>
+  <script src="bootstrap5/bootstrap.bundle.min.js"></script>
   <script src="script/js.cookie.min.js"></script>
   <script src="script/theme.js"></script>
 </body>
