--- a/joke.html
+++ b/joke.html
@@ -7,13 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>秘密页</title>
   <style>
-    @import"light.css";
+    @import"main.css";
     @import"secret.css";
   </style>
   <link href="https://fonts.googlefonts.cn/css?family=Roboto|Roboto+Slab" rel="stylesheet">
 </head>
 
-<body>
+<body class="index-bg">
   <h1>二营笑话</h1>
   <div>
     <h2>微信群里的10种人</h2>
