--- a/kind1/index.html
+++ b/kind1/index.html
@@ -7,17 +7,17 @@
   <meta name="keywords" content="">
   <meta name="description" content="">
   <link href="../bootstrap5/bootstrap.min.css" rel="stylesheet">
-  <link href="../styles/light.css" rel="stylesheet">
+  <link href="../styles/main.css" rel="stylesheet">
   <link href="../styles/bootstrap-icons.min.css" rel="stylesheet">
   <title>随写随记</title>
   <link rel="shortcut icon" type="image/x-icon" href="../logo/shortcut.png">
   </link>
 </head>
 
-<body class="bg-body-secondary">
+<body class="index-bg">
 
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container">
+  <nav class="navbar navbar-expand-lg nav-bg">
+    <div class="container main-text">
       <a class="btn btn-link text-decoration-none" href="../about/index.html"><i class="bi bi-info-lg"></i> 关于</a>
       <a href="../index.html"><img src="https://pic.imgdb.cn/item/661d3f9e0ea9cb1403d29f29.png" height="36"
           id="logo"></a>
@@ -33,15 +33,15 @@
   </nav>
   <br />
 
-  <div class="container">
+  <div class="container main-text">
     <h1>随写随记</h1>
     <br>
     <div class="row gy-2">
       <div class="col-12">
         <div class="card">
           <div class="card-body">
-            <a href="rebuildWebsite.html">
-              <h4 class="text-primary">网站重建记</h4>
+            <a href="rebuildWebsite.html" class="text-decoration-none">
+              <h4 class="link">网站重建记</h4>
             </a>
             <span class="text-muted">记录我重新搭建本网站的过程。</span>
           </div>
@@ -50,7 +50,7 @@
     </div>
   </div>
 
-  <script src="../bootstrap5/bootstrap.min.js"></script>
+  <script src="../bootstrap5/bootstrap.bundle.min.js"></script>
   <script src="../script/js.cookie.min.js"></script>
   <script src="../script/theme.js"></script>
 </body>
