--- a/mcl.html
+++ b/mcl.html
@@ -7,12 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Minecraft 启动器推荐</title>
   <style>
-    @import"light.css";
+    @import"main.css";
     @import"secret.css";
   </style>
   <link href="https://fonts.googlefonts.cn/css?family=Roboto|Roboto+Slab" rel="stylesheet">
 
-<body>
+<body class="index-bg">
 
   <h1>Minecraft&thinsp;启动器推荐</h1>
   <p>由&thinsp;<a href="https://commongoldingot.github.io">CommonGoldIngot</a>&thinsp;整理</p>
