--- a/templateKind/template.html
+++ b/templateKind/template.html
@@ -8,17 +8,17 @@
   <meta name="description" content="">
   <link href="../bootstrap5/bootstrap.min.css" rel="stylesheet">
   <!--不要忘记更换这里的路径！-->
-  <link href="../styles/light.css" rel="stylesheet">
+  <link href="../styles/main.css" rel="stylesheet">
   <link href="../styles/bootstrap-icons.min.css" rel="stylesheet">
   <title>不要忘了改标题！</title>
   <link rel="shortcut icon" type="image/x-icon" href="../logo/shortcut.png">
   </link>
 </head>
 
-<body class="bg-body-secondary">
+<body class="index-bg">
 
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container">
+  <nav class="navbar navbar-expand-lg nav-bg">
+    <div class="container main-text">
       <a class="btn btn-link text-decoration-none" href="../about/index.html"><i class="bi bi-info-lg"></i> 关于</a>
       <a href="../index.html"><img src="https://pic.imgdb.cn/item/661d3f9e0ea9cb1403d29f29.png" height="36"
           id="logo"></a>
@@ -34,8 +34,8 @@
   </nav>
   <br />
 
-  <div class="container">
-    <h6 class="text-primary"><a href="index.html"><b>副标题</b></a></h6>
+  <div class="container main-text">
+    <h6 class="text-primary"><a href="index.html" class="link text-decoration-none"><b>副标题</b></a></h6>
     <h1>主标题</h1>
     <br />
     <!--在这里写入内容-->
@@ -44,7 +44,7 @@
   </div>
 
   <!--不要忘记更换这里的路径！-->
-  <script src="../bootstrap5/bootstrap.min.js"></script>
+  <script src="../bootstrap5/bootstrap.bundle.min.js"></script>
   <script src="../script/js.cookie.min.js"></script>
   <script src="../script/theme.js"></script>
 </body>
