--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <link href="https://johnzhang888.github.io/bootstrap5/bootstrap.min.css" rel="stylesheet">
   <!--不要忘记更换这里的路径！-->
-  <link href="https://johnzhang888.github.io/styles/light.css" rel="stylesheet">
+  <link href="https://johnzhang888.github.io/styles/main.css" rel="stylesheet">
   <link href="https://johnzhang888.github.io/styles/bootstrap-icons.min.css" rel="stylesheet">
   <title>404 Not Found</title>
   <link rel="shortcut icon" type="image/x-icon" href="https://johnzhang888.github.io/logo/shortcut.png">
@@ -17,8 +17,8 @@
 
 <body class="bg-danger" style="--bs-bg-opacity: .075">
 
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container">
+  <nav class="navbar navbar-expand-lg nav-bg">
+    <div class="container main-text">
       <a class="btn btn-link text-decoration-none" href="about/index.html"><i class="bi bi-info-lg"></i> 关于</a>
       <a href="index.html"><img src="https://pic.imgdb.cn/item/661d3f9e0ea9cb1403d29f29.png" height="36" id="logo"></a>
       <div class="btn-group" role="group" aria-label="Basic example">
@@ -33,7 +33,7 @@
   </nav>
   <br />
 
-  <div class="container">
+  <div class="container main-text">
     <h6 class="text-danger"><b>404 Not Found</b></h6>
     <h1>网页不存在</h1>
     <br />
@@ -46,7 +46,7 @@
   </div>
 
   <!--不要忘记更换这里的路径！-->
-  <script src="https://johnzhang888.github.io/sbootstrap5/bootstrap.min.js"></script>
+  <script src="https://johnzhang888.github.io/sbootstrap5/bootstrap.bundle.min.js"></script>
   <script src="script/js.cookie.min.js"></script>
   <script src="script/theme.js"></script>
 </body>
