--- a/about/aboutWebsite.html
+++ b/about/aboutWebsite.html
@@ -8,16 +8,16 @@
   <meta name="description" content="">
   <link href="../bootstrap5/bootstrap.min.css" rel="stylesheet">
   <!--不要忘记更换这里的路径！-->
-  <link href="../styles/light.css" rel="stylesheet">
+  <link href="../styles/main.css" rel="stylesheet">
   <title>John's website</title>
   <link rel="shortcut icon" type="image/x-icon" href="../logo/shortcut.png">
   </link>
 </head>
 
-<body class="bg-body-secondary">
+<body class="index-bg">
 
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container">
+  <nav class="navbar navbar-expand-lg nav-bg">
+    <div class="container main-text">
       <a class="btn btn-link text-decoration-none" href="../about/index.html"><i class="bi bi-info-lg"></i> 关于</a>
       <a href="../index.html"><img src="https://pic.imgdb.cn/item/661d3f9e0ea9cb1403d29f29.png" height="36"
           id="logo"></a>
@@ -33,8 +33,8 @@
   </nav>
   <br />
 
-  <div class="container">
-    <h6 class="text-primary"><a href="index.html"><b>关于</b></a></h6>
+  <div class="container main-text">
+    <h6 class="text-primary"><a href="index.html" class="link text-decoration-none"><b>关于</b></a></h6>
     <h1>关于网站</h1>
     <br />
     <p>本网站初建于 2022 年 11 月，最初为偶然发现 Github Pages 这一服务而尝试建设，没想到一发不可收拾，最终建设为一个完整的网站。</p>
@@ -45,7 +45,7 @@
   </div>
 
   <!--不要忘记更换这里的路径！-->
-  <script src="../bootstrap5/bootstrap.min.js"></script>
+  <script src="../bootstrap5/bootstrap.bundle.min.js"></script>
   <script src="../script/js.cookie.min.js"></script>
   <script src="../script/theme.js"></script>
 </body>
