--- a/about/license.html
+++ b/about/license.html
@@ -8,17 +8,17 @@
   <meta name="description" content="">
   <link href="../bootstrap5/bootstrap.min.css" rel="stylesheet">
   <!--不要忘记更换这里的路径！-->
-  <link href="../styles/light.css" rel="stylesheet">
+  <link href="../styles/main.css" rel="stylesheet">
   <link href="../styles/bootstrap-icons.min.css" rel="stylesheet">
   <title>许可证</title>
   <link rel="shortcut icon" type="image/x-icon" href="../logo/shortcut.png">
   </link>
 </head>
 
-<body class="bg-body-secondary">
+<body class="index-bg">
 
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container">
+  <nav class="navbar navbar-expand-lg nav-bg">
+    <div class="container main-text">
       <a class="btn btn-link text-decoration-none" href="../about/index.html"><i class="bi bi-info-lg"></i> 关于</a>
       <a href="../index.html"><img src="https://pic.imgdb.cn/item/661d3f9e0ea9cb1403d29f29.png" height="36"
           id="logo"></a>
@@ -34,8 +34,8 @@
   </nav>
   <br />
 
-  <div class="container">
-    <h6 class="text-primary"><a href="index.html"><b>关于</b></a></h6>
+  <div class="container main-text">
+    <h6 class="text-primary"><a href="index.html" class="link text-decoration-none"><b>关于</b></a></h6>
     <h1>许可证</h1>
     <p>我欢迎任何人阅读、修改、转发本网站的内容。但是，你需要遵守一些许可证（也被称为“协议”），来保证本网站的内容不会被非法侵占或胡乱使用。以下是许可证的粗略内容，详细内容请点击相应按钮查询。</p>
     <br />
@@ -70,7 +70,7 @@
   </div>
 
   <!--不要忘记更换这里的路径！-->
-  <script src="../bootstrap5/bootstrap.min.js"></script>
+  <script src="../bootstrap5/bootstrap.bundle.min.js"></script>
   <script src="../script/js.cookie.min.js"></script>
   <script src="../script/theme.js"></script>
 </body>
