--- a/tools-and-games/index.html
+++ b/tools-and-games/index.html
@@ -40,8 +40,8 @@
       <div class="col-12">
         <div class="card">
           <div class="card-body">
-            <a href="XYes.html">
-              <h4 class="text-primary">XYes</h4>
+            <a href="XYes.html" class="link text-decoration-none">
+              <h4>XYes</h4>
             </a>
             <span class="text-muted">一个二元一次方程组求解器。</span>
           </div>
