New index.html test

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
     </div>
     <br />
     <p>友情链接：任浩铭的网站——<a class="link" href="https://commongoldingot.github.io">Common Gold Ingot</a>。</p>
+    <p><a class="link" href="new-index-john.html">体验新的首页！</a></p>
   </div>
 
   <script src="bootstrap5/bootstrap.bundle.min.js"></script>
