--- a/about.html
+++ b/about.html
@@ -1,31 +1,38 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
+<!doctype html>
+<html lang="zh-CN" data-bs-theme="light">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>关于</title>
-  <style>
-    @import"main.css"
-  </style>
-  <link href="https://fonts.googlefonts.cn/css?family=Roboto|Roboto+Slab" rel="stylesheet">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="keywords" content="">
+  <meta name="description" content="">
+  <link href="styles/bootstrap.min.css" rel="stylesheet">
+  <!--不要忘记更换这里的路径！-->
+  <link href="styles/main.css" rel="stylesheet">
+  <link href="styles/bootstrap-icons.min.css" rel="stylesheet">
+  <title class="-rebuild-title"></title>
+  <link rel="shortcut icon" type="image/x-icon" href=“logo/shortcut.png">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans|Noto+Sans+SC">
+
+
 </head>
 
-<body class="index-bg">
-  <h1>关于</h1>
-  <div>
-    <p>张永康，英文名 John Zhang，是一个郑州的七年级初中生。</p>
-    <p>喜欢音乐，编程，写文章 :-D</p>
-    <p><del>先写这么多，咕~</del></p>
-  </div>
-  <div>
-    <h2>友情链接</h2>
-    <p><a href="https://CommonGoldIngot.github.io">Common Gold Ingot 一个普通的金锭（任浩铭）</a></p>
-    <p>顺带一提，这网站是真的烂，连我都看不下去了！</p>
-    <p><br /><a href="index.html"><img / src="https://pic.imgdb.cn/item/63943ac8b1fccdcd367c79c8.png" class="logo"
-          width="100px" height="10%" alt="返回首页"></a></p>
-  </div>
+<body>
+  <div id="Navbar"></div>
+  <script src="scripts/bootstrap.bundle.min.js"></script>
+  <script src="scripts/js.cookie.min.js"></script>
+  <script src="scripts/jquery-3.7.1.min.js"></script>
+  <script src="scripts/components.js"></script>
+  <script>
+    function otherChineseText() {
+
+    }
+    function otherEnglishText() {
+
+    }
+  </script>
+  <script src="scripts/language.js"></script>
+  <script src="scripts/theme.js"></script>
 </body>
 
 </html>
