--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="carousel-caption d-md-block">
           <h2 class="text-white -spring-title"></h2>
           <p class="text-white -spring-description"></p>
-          <a class="btn btn-lg btn-primary -read" href="spring.html"></a>
+          <a class="btn btn-lg btn-glass -read" href="spring.html"></a>
           <br><br>
         </div>
       </div>
@@ -41,17 +41,17 @@
         <div class="carousel-caption d-md-block">
           <h2 class="text-white -rebuild-title"></h2>
           <p class="text-white -rebuild-description"></p>
-          <a class="btn btn-lg btn-primary -read" href="rebuild.html"></a>
+          <a class="btn btn-lg btn-glass -read" href="rebuild.html"></a>
           <br><br>
         </div>
       </div>
       <div class="carousel-item">
         <img src="https://pic.52112.com/2019/07/23/JPG-190723_587/pdXtrNWpmz_small.jpg"
-          class="d-block w-100 carousel-image" alt="" style="filter: brightness(0.4);">
+          class="d-block w-100 carousel-image" alt="">
         <div class="carousel-caption d-md-block">
           <h2 class="text-white -xyes-title">XYes</h2>
           <p class="text-white -xyes-description"></p>
-          <a class="btn btn-lg btn-primary -try" href="xyes.html"></a>
+          <a class="btn btn-lg btn-glass -try" href="xyes.html"></a>
           <br><br>
         </div>
       </div>
@@ -77,7 +77,7 @@
             <div id="kind1-img" class="carousel slide carousel-fade" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="https://pic.imgdb.cn/item/663791ff0ea9cb1403859b6d.png" class="small-img">
+                  <img src="https://pic.imgdb.cn/item/663791ff0ea9cb1403859b6d.png" class="small-img rounded">
                 </div>
               </div>
             </div>
@@ -87,7 +87,7 @@
               <h3 class="-essays-title"></h3>
             </a>
             <ul>
-              <li><a href="rebuild.html" class="link -rebuild-title" onmouseenter="MouseOnRebuild"></a>
+              <li><a href="rebuild.html" class="link -rebuild-title text-decoration-none" onmouseenter="MouseOnRebuild"></a>
               </li>
             </ul>
           </div>
@@ -98,10 +98,10 @@
       <div class="col-12 col-md-6">
         <div class="row gx-4">
           <div class="col-4">
-            <div id="kind2-img" class="carousel slide carousel-fade">
+            <div id="kind2-img" class="carousel slide carousel-fade" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="https://pic.imgdb.cn/item/66373a8e0ea9cb1403ac65ec.jpg" class="small-img">
+                  <img src="https://pic.imgdb.cn/item/66373a8e0ea9cb1403ac65ec.jpg" class="small-img rounded">
                 </div>
                 <div class="carousel-item">
                   <img
@@ -109,7 +109,7 @@
                     class="small-img">
                 </div>
                 <div class="carousel-item">
-                  <img src="https://pic.imgdb.cn/item/66372c210ea9cb1403872d40.jpg" class="small-img">
+                  <img src="https://pic.imgdb.cn/item/66372c210ea9cb1403872d40.jpg" class="small-img rounded">
                 </div>
               </div>
             </div>
@@ -119,9 +119,9 @@
               <h3 class="-composition-title"></h3>
             </a>
             <ul>
-              <li><a href="voice.html" class="link -voice-title" onmouseenter="MouseOnVoice()"></a></li>
-              <li><a href="star.html" class="link -star-title" onmouseenter="MouseOnStar()"></a></li>
-              <li><a href="spring.html" class="link -spring-title" onmouseenter="MouseOnSpring()"></a></li>
+              <li><a href="voice.html" class="link -voice-title text-decoration-none" onmouseenter="MouseOnVoice()"></a></li>
+              <li><a href="star.html" class="link -star-title text-decoration-none" onmouseenter="MouseOnStar()"></a></li>
+              <li><a href="spring.html" class="link -spring-title text-decoration-none" onmouseenter="MouseOnSpring()"></a></li>
             </ul>
           </div>
         </div>
@@ -134,23 +134,24 @@
             <div id="tag-img" class="carousel slide carousel-fade" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="https://pic.52112.com/2019/07/23/JPG-190723_587/pdXtrNWpmz_small.jpg" class="small-img">
+                  <img src="https://pic.52112.com/2019/07/23/JPG-190723_587/pdXtrNWpmz_small.jpg"
+                    class="small-img rounded">
                 </div>
                 <div class="carousel-item">
                   <img
-                    src="https://is5-ssl.mzstatic.com/image/thumb/Purple117/v4/26/18/32/26183275-0d9d-27ca-492b-ef727affa7e2/source/512x512bb.jpg"
-                    class="small-img">
+                    src="https://is1-ssl.mzstatic.com/image/thumb/Purple113/v4/10/aa/5b/10aa5b33-e2e1-83ce-0422-4133002614c5/source/512x512bb.jpg"
+                    class="small-img rounded">
                 </div>
               </div>
             </div>
           </div>
           <div class="col-8">
-            <a href="tools-and-games.html" class="body-link">
+            <a href="tools-and-games.html" class="body-link text-decoration-none">
               <h3 class="-tag-title"></h3>
             </a>
             <ul>
-              <li><a href="xyes.html" class="link -xyes-title" onmouseenter="mouseOnTag0()"></a>
-              <li><a href="spy.html" class="link -spy-title" onmouseenter="mouseOnTag1()"></a>
+              <li><a href="xyes.html" class="link -xyes-title text-decoration-none" onmouseenter="mouseOnTag0()"></a>
+              <li><a href="spy.html" class="link -spy-title text-decoration-none" onmouseenter="mouseOnTag1()"></a>
               </li>
             </ul>
           </div>
