--- a/rebuild.html
+++ b/rebuild.html
@@ -33,8 +33,9 @@
           <i class="bi bi-calendar-fill"></i>&ensp;2023/7/26
         </p>
         <div class="No-english alert alert-info" role="alert">
-          <i class="bi bi-exclamation-triangle-fill"></i>
-          &ensp;The passage was not translated to English completely.
+          <i class="bi bi-translate"></i>
+          &ensp;Most of the passage was translated to English by <a class="alert-link"
+            href="https://fanyi.baidu.com">Baidu Translator</a>.
         </div>
         <div class="-text">
         </div>
@@ -141,15 +142,14 @@
     <p>In fact, the idea of rebulding it was not thought up suddenly these days. I noticed that my close friend <a class="link" href="https://commongoldingot.github.io"
         target="_blank">Rabbit</a>'s website is all new which was more than I ever imagined (I redeculed it in my website in the past). So I talked about it to him at dinner time and promised to rebuild my website in the summer holidays.</p>
     <p>Now it's summer holidays, time to fulfill my promise.</p>
-    <h3>工欲善其事，必先利其器</h3>
-    <p>之前我一直使用 Windows 操作系统编写网站，虽说没有什么不对，但是运行速度慢一点，安装软件麻烦一点，配置环境麻烦一点……这些“一点”逼迫着我离开这个操作系统。对不起，微软，我最终还是选择了
-      GNU/Linux。至于发行版，我选择了 Linux Mint，基于强大的 Ubuntu 却又没有 snap 和广告的骚扰，运行速度也是杠杠的。</p>
-    <p>不过微软也不用太伤心，毕竟编辑器还是 Visual Studio Code，从我开始编程的第一天就在用，实在顺手得很。</p>
-
-    <h3>轮子选得好，不用自己造</h3>
-    <p>看到 Rabbit 跟我炫耀他的网站有多么大，CSS有多么长，我便嗤之以鼻。现在网上现成的 CSS、JS 框架那么多，何必自己造轮子呢？选择自己觉得方便、顺手的一款就行了。于是，我选择了 <a class="link"
-        href="https://getbootstrap.com">Bootstrap</a>。</p>
-    <p>我本来是想用 Tailwind CSS 的，然而大家对比一下下面这两段代码就知道我为什么不用它了。</p>
+    <h3>To do a good job, one must first sharpen their tools</h3> 
+<p>I have been using the Windows operating system to write websites before. Although there is nothing wrong with it, the running speed is a bit slow, installing software is a bit troublesome, and configuring the environment is a bit troublesome... These "little things" forced me to leave this operating system. Sorry Microsoft, I ultimately chose 
+GNU/Linux。 As for the distribution, I chose Linux Mint, which is based on the powerful Ubuntu without the harassment of snaps and advertisements, and its running speed is also impressive</ p> 
+<p>But Microsoft doesn't have to be too sad, after all, the editor is still Visual Studio Code, which I have been using since the first day I started programming, and it's really user-friendly</ p> 
+<h3>The wheels are well chosen, there's no need to make them yourself</h3> 
+<p>When I saw Rabbit boasting to me about how big his website is and how long his CSS is, I sneered. There are so many CSS and JS frameworks available online now, why build your own wheels? Just choose the one that you find convenient and easy to use. So, I chose<a class="link" 
+href="https://getbootstrap.com"> Bootstrap</a></p> 
+<p>I originally intended to use Tailwind CSS, but by comparing the following two pieces of code, you will understand why I no longer use it.</p>
     <div class="row">
       <div class="col-12 col-lg-6">
         <p class="text-danger">Tailwind CSS</p>
@@ -165,9 +165,11 @@
       </div>
     </div>
 
-    <h3>开始编写</h3>
-    <p>准备工作完成，接下来就该编写网站了。这个过程比较枯燥：编辑器里写一点，<kbd>Ctrl</kbd> + <kbd>S</kbd> 一下，然后再切换到浏览器，<kbd>F5</kbd> 一下……最后就写好了（其实还没有写好）。
-    </p>`)
+    <h3>Start writing</h3> 
+<p>The preparation work is completed, and the next step is to write the website. This process is quite tedious: write a little bit in the editor, <kbd>Ctrl</kbd> + <kbd>S</kbd> once, then switch to the browser, <kbd>F5</kbd> once... Finally, it's written (in fact, it hasn't been written yet). 
+</p> 
+
+`)
     }
   </script>
   <script src="scripts/language.js"></script>
